Retry freeze in cgroups TasksKiller to workaround MESOS-1689.

Review: https://reviews.apache.org/r/24511